--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "author": "sobolevn <mail@sobolevn.me>",
   "private": false,
   "scripts": {
-    "publish-please": "./node_modules/.bin/publish-please",
-    "ppublish": "npm run build && publish-please guard && npm run publish-please && npm run ghpages",
+    "prepublish": "./node_modules/.bin/publish-please guard",
+    "publish-please": "npm run build && ./node_modules/.bin/publish-please && npm run ghpages",
     "build": "./node_modules/.bin/webpack --config build/webpack.conf.js",
     "test:unit": "karma start test/unit/karma.conf.js --single-run",
     "test:security": "./node_modules/.bin/nsp check",
@@ -17,7 +17,6 @@
     "play:build": "vue-play build"
   },
   "files": [
-    "src/",
     "src/",
     "dist/",
     "LICENSE.md",
@@ -38,9 +37,7 @@
     "babel-register": "^6.0.0",
     "babel-runtime": "5",
     "chai": "^3.5.0",
-    "connect-history-api-fallback": "^1.1.0",
     "coveralls": "^2.11.14",
-    "cross-spawn": "^4.0.2",
     "css-loader": "^0.25.0",
     "document-offset": "^1.0.4",
     "eslint": "^3.7.1",
@@ -53,15 +50,11 @@
     "eventsource-polyfill": "^0.9.6",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
-    "function-bind": "^1.0.2",
     "gh-pages": "^0.11.0",
     "html-webpack-plugin": "^2.8.1",
     "http-proxy-middleware": "^0.17.2",
     "humane-js": "^3.2.2",
-    "inject-loader": "^2.0.1",
     "isparta-loader": "^2.0.0",
-    "js-cookie": "^2.1.3",
-    "json-loader": "^0.5.4",
     "karma": "^1.3.0",
     "karma-coverage": "^1.1.1",
     "karma-coveralls": "^1.1.2",
